--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Message for you!</title>
-    <link rel="stylesheet" href="../../css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="navbar">
